    * FIX: correctly quote ! and \ in active checks for Nagios
    * Check_MK core now supports umlauts in host-/service- and contactgroup names

    Checks & Agents:
    * FIX: vsphere_agent: fix problems whith ! and \ in username or password
    * FIX: check_mk_agent.aix: fix shebang: was python, must be ksh
    * FIX: cisco_qos: Be compatible to newer IOS-XE versions (Thanks to Ken Smith)

1.2.2:
    Core:
    * Added $HOSTURL$ and $SERVICEURL$ to notification macros which contain an
      URL to the host/service details views with /check_mk/... as base.

    Checks & Agents:
    * FIX: blade_bx_load: remove invalid WATO group
    * FIX: lnx_bonding: handle also 802.3ad type bonds

    Notifications:
    * FIX: Removing GRAPH_CODE in html mails when not available
    * Using plugin argument 1 for path to pnp4nagios index php to render graphs
    * Little speedup of check_mk --notify

    Multisite:
    * FIX: Fixed umlaut handling in reloaded snapins

    WATO:
    * FIX: Fix several cases where WATO rule analyser did not hilite all matching rules
    * Added tcp port parameter to SSL certificate check (Thanks to Marcel Schulte)

    Event Console:
    * FIX: Syslog server is now able to parse RFC 5424 syslog messages

1.2.2b7:
    Checks & Agents:
    * FIX: postfix_mailq: fix labels in WATO rule, set correct default levels
    

1.2.2b6:
    Core:
    * FIX: setup: detect check_icmp also on 64-Bit CentOS
           (thanks to あきら) 
    * FIX: setup.sh: create auth.serials, fix permissions of htpasswd
    * FIX: livecheck: now able to handle check output up to 16kB

    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * FIX: check_mk-mssql_counters.locks: fix computation, was altogether wrong
    * FIX: check_mk-mssql_counters.transactions: fix computation also
    * check_http: now support the option -L (urlizing the result)